--- a/charts/gha-runner-scale-set-controller/values.yaml
+++ b/charts/gha-runner-scale-set-controller/values.yaml
@@ -9,12 +9,13 @@ labels: {}
 replicaCount: 1
 
 image:
-  repository: "ghcr.io/actions/gha-runner-scale-set-controller"
+  repository: "insightecomtest.azurecr.io/arc-controller"
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "0.9.1"
 
-imagePullSecrets: []
+imagePullSecrets: 
+ - name: acr-cred
 nameOverride: ""
 fullnameOverride: ""
 
